# thirdparty-physx

./: .gitignore  CMakeLists.txt  README.md  init.cmake
4.1.1.27006925/PhysX/include/: PxConfig.h
